--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "homepage": "https://kmrnitish98.github.io/web-Portfolio/"
+
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
